codex-rs/tui/src/snapshots/codex_tui__status_indicator_widget__tests__renders_with_idle_liveness_badge.snap
---
source: tui/src/status_indicator_widget.rs
expression: terminal.backend()
---
"• Working [idle lag 4.2s queue 3] (0s • esc to interrupt)                       "
"                                                                                "
