codex-rs/tui/src/snapshots/codex_tui__status_indicator_widget__tests__renders_with_stalled_liveness_badge.snap
---
source: tui/src/status_indicator_widget.rs
expression: terminal.backend()
---
"• Working [stalled lag 15.0s queue 0] (0s • esc to interrupt)                   "
"                                                                                "
